enable vector api